add readme details

--- a/README
+++ b/README
@@ -1,1 +1,42 @@
+# TellStory
 
+TellStory is a simple and entertaining story generator which presents the previous sentence and asks 
+the user to build a new sentence based of the last one. This continues around all the users. 
+Once completed, the full story can be generated.
+
+## Description
+
+This game was created as a way of practising newly learnt skills within the dev environment. It takes 
+an input, stores it in a table, then presents the last input while also recording the new input. It 
+then merges all the inputs to generate the story.
+
+It has a very simple UI with a landing page which has a table of starting sentences which are pulled 
+at random. It also has a submit button to submit an entry and a generate story button when all users 
+have had thier turn. Once the story has been generated, you have the option to restart the game.
+
+## Getting Started
+
+### Installing
+
+* Clone the repo down
+*To install current project dependencies
+```
+nmp install 
+```
+
+### Executing program
+
+* How to run the program
+To run the server, enter the below in your command line:
+```
+npm run dev
+```
+
+## Authors
+
+Contributors
+
+Matt Silver 
+Karishma Patel
+Kahy Leary 
+Nimesh Govind
